syntax = "proto3";
package anndb_pb;

import "core.proto";

service NodesManager {
	rpc AddNode(Node) returns (stream Node);
	rpc RemoveNode(Node) returns (EmptyMessage);
}

message Node {
	uint64 id = 1;
	string address = 2;
}